Update testimonials colour for accessibility

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -143,7 +143,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"A scream come true!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"A scream come true!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "I used to haunt abandoned castles, but ever since I discovered Spooky Experiences, 
               I've upgraded to luxury manors with actual humans to terrify. Five moans out of five."
@@ -163,7 +163,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"Possessed with joy!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"Possessed with joy!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "Finally, a service that understands the needs of a modern demon! 
               Seamless integration with mortal vessels - and no hidden exorcism fees."
@@ -183,7 +183,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"Un-living my best afterlife!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"Un-living my best afterlife!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "Before joining a Spooky Experience, I was just rattling chains aimlessly. 
               Now I've got a booked calendar and a fan club of terrified influencers."
@@ -203,7 +203,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"Perfect for my cult retreats!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"Perfect for my cult retreats!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "We were looking for a cozy spot for our next blood moon ritual -
               and Spooky Experiences delivered. Great ambiance, minimal screaming (from us, anyway)."
@@ -223,7 +223,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"Boo-tifully organized!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"Boo-tifully organized!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "I've been haunting for centuries and never met such professional souls. 
               They even provide refreshments - ectoplasm smoothies, anyone?"
@@ -243,7 +243,7 @@ Home • Spooky Experiences
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card bg-dark text-light h-100 border-0 shadow-sm rounded-4">
           <div class="card-body">
-            <h5 class="card-title accent-color fw-semibold">"Five pentagrams out of five!"</h5>
+            <h5 class="card-title text-warning fw-semibold">"Five pentagrams out of five!"</h5>
             <p class="card-text text-secondary fst-italic mb-4">
               "Outstanding service. The summoning portal arrived ahead of schedule and 
               the chanting acoustics were to die for - literally.""
