Correct bugs on event_details.html and purchase.html styles.

--- a/events/templates/events/purchase.html
+++ b/events/templates/events/purchase.html
@@ -15,7 +15,7 @@
           </h5>
 
           <div class="d-flex align-items-center gap-3 mb-3">
-            <img src="{{ event.image.url }}" alt="{{ event.title }}" class="img-fluid rounded-3" style="width: 100px; height: 100px; object-fit: cover;">
+            <img src="{{ event.image.url }}" alt="{{ event.title }}" class="img-fluid rounded-3" style="height: 100px; object-fit: cover;">
             <div>
               <h6 class="mb-1">{{ event.title }}</h6>
               <p class="text-secondary small mb-1">{{ event.location }}</p>
