--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -8,10 +8,10 @@
   </div>
   <div class="col-md-6">
     <h1 class="text-warning">{{ event.title }}</h1>
-    <p class="mb-1">{{ event.location }}</p>
-    <p class="mb-1">⭐ {{ event.rating }}</p>
-    <p class="lead">👻 {{ event.cost|floatformat:0  }} souls</p>
-    <p>{{ event.description }}</p>
+    <p class="text-light mb-1">{{ event.location }}</p>
+    <p class=" text-light mb-1">⭐ {{ event.rating }}</p>
+    <p class=" text-light lead">👻 {{ event.cost|floatformat:0  }} souls</p>
+    <p class="text-light">{{ event.description }}</p>
 
     <a href="{% url 'purchase' event.pk %}" class="btn btn-orange btn-lg">Purchase</a>
     {% if event.details_url %}
